--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ a {
   color: #F58B2B;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px 0;
 }
@@ -13,6 +18,7 @@ a {
 .App-logo {
   max-width: 600px;
   display: block;
+
   margin: 0 auto;
   border-radius: 10px;
 }
@@ -20,4 +26,26 @@ a {
 .App-footer {
   text-align: center;
   margin: 30px 0;
+}
+
+@media (max-width: 960px) {
+  .App-logo {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  .App {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .App-logo {
+    max-width: 200px;
+    margin: 0 auto;
+  }
+  .App {
+    max-width: 300px;
+    margin: 0 auto;
+  }
 }
