--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -9,3 +9,15 @@
   font-style: italic;
   margin-top: 10px;
 }
+
+@media (max-width: 500px) {
+  .Meaning h3{
+    font-size: 16px;
+  }
+  .Meaning .definition {
+    font-size: 14px;
+  }
+  .Meaning .example {
+    font-size: 14px;
+  }
+}
