--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -3,3 +3,10 @@
   opacity: 0.7;
   font-weight: bold;
 }
+
+@media (max-width: 500px) {
+  .Phonetics h3 {
+    font-size: 18px;
+    margin: 10px 0;
+  }
+}
